test_suite/tests/ui/expected-string/float.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/float.rs:6:22
  |
6 |     #[serde(rename = 3.14)]
  |                      ^^^^

error: aborting due to previous error

